--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#gioco{
+}
+
+.boxNr{
+    width: 200px;
+    height: 400px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+}
