--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+h1{
+    -webkit-text-stroke: 2px black;
+}
 .boxNr{
     width: calc(100% / 1 - 40px);
     border: 1px solid black;
@@ -12,25 +14,38 @@
     justify-content: center;
     align-items: center;
     font-size: 3rem;
+    color: white;
+    -webkit-text-stroke: 2px black;
 }
 .container{
     background-color: antiquewhite;
 }
 #timerOutput{
-    animation: pulse 2s infinite linear ;
+    animation: pulse 1.5s infinite linear ;
+    opacity: 100%;
 }
-
-
-
 
 @keyframes pulse {
     0% {
-      color: #0682f5;
+      opacity: 100%;
     }
-    50%{
-      opacity: 0;
-    }
+    
     100% {
-      color: #0682f5;
+      opacity: 0%;
+    }
+  }
+  @media screen and (min-width: 992px) {
+    .boxNr{
+        width: calc(100% / 5 - 60px);
+        height: 400px;
+        border: 1px solid black;
+        margin: 5px 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 3rem;
+    }
+    #play{
+        margin: 0 20px;
     }
   }
