--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: white;
+}
+a{
+    text-decoration: none;
+    tex
 }
 h1{
     -webkit-text-stroke: 2px black;
@@ -59,4 +64,10 @@ h1{
     #play{
         margin: 0 20px;
     }
+  }
+  .container-fluid{
+    background-image: url(../img/sfondo1.svg);
+ height: 100vh;
+ background-repeat: no-repeat;
+ background-size: cover;
   }
