--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 }
 a{
     text-decoration: none;
-    tex
 }
 h1{
     -webkit-text-stroke: 2px black;
@@ -14,7 +13,6 @@ h1{
 .boxNr{
     width: calc(100% / 1 - 40px);
     border: 1px solid black;
-    margin: 5px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,10 +33,13 @@ h1{
     height: 200px;
     align-items: center;
     flex-direction: column;
+    gap: 10px;
+    
 }
 .outputFinale span{
     font-weight: bold;
     font-size: 2rem;
+    text-align: center;
 }
 
 @keyframes pulse {
